--- a/learned/static/main.scss
+++ b/learned/static/main.scss
@@ -32,9 +32,6 @@ section.main {
     }
     ul {
         list-style: none;
-        li {
-            margin-bottom: 1.5em;
-        }
         padding-left: 0;
     }
 }
